# libdnf-plugin-filewatcher

./: CMakeLists.txt  README.md  filewatcher.conf.dist  filewatcher.cpp  make.sh
